overflow fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,8 +30,12 @@ body {
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   position: relative;
-  overflow-x: hidden;
   color:$Very-Dark-Violet;
+}
+
+#root {
+  width: 100%;
+  overflow-x: hidden;
 }
 
 section {
